--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -6,7 +6,7 @@
 
 .nav a {
     color: #fff;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: bold;
     padding: 10px;
 }
@@ -17,4 +17,7 @@
 
 .nav li a {
     text-decoration: none;
+}
+#header{
+	
 }
