--- a/css/food.css
+++ b/css/food.css
@@ -6,9 +6,13 @@ h2 {
 
 div p {
     margin: 0 auto;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 #pci2 {
     float: left;
+}
+
+div ul li {
+    font-size: 18px;
 }
