--- a/css/food.css
+++ b/css/food.css
@@ -1,16 +1,12 @@
 h2 {
     text-align: center;
     color: #711B1B;
-    font-family: "Times New Roman", Times, serif;
+    font-family: "Times New Roman", "標楷體", Times, serif;
 }
 
 div p {
     margin: 0 auto;
     font-size: 20px;
-}
-
-#pci2 {
-    float: left;
 }
 
 div ul li {
