--- a/css/food.css
+++ b/css/food.css
@@ -1,3 +1,16 @@
+.nav .container-fluid {
+    background-color: #440404;
+}
+
+.nav .container-fluid ul {
+    list-style-type: none;
+}
+
+.nav .container-fluid ul li {
+    float: left;
+    padding: 10px;
+}
+
 h2 {
     text-align: center;
     color: #711B1B;
