--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -20,5 +20,6 @@
 }
 
 .jumbotron .container {
-    //background-image: url("../images/leaf.jpg");
+    background-image: url("../images/leaf.jpg");
+    background-repeat: repeat;
 }
