--- a/css/food.css
+++ b/css/food.css
@@ -22,6 +22,20 @@
     text-decoration: none;
 }
 
+p>img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+img {
+    padding: 2px;
+}
+
+#section1 p:last-child {
+    text-align: center;
+}
+
 h2 {
     text-align: center;
     color: #711B1B;
