--- a/css/food.css
+++ b/css/food.css
@@ -66,6 +66,7 @@ div p {
 .pstyle {
     margin: 10px;
     padding: 10px;
+    padding-left: 25px;
     border-color: black;
     border-width: 1px;
     border-style: solid;
