--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -1,14 +1,15 @@
 /* 導覽列 */
 
 .nav .container-fluid {
-    background-color: #000;
+    height: 50px;
+    background-color: gray;
 }
 
 .nav a {
     color: #fff;
     font-size: 18px;
     font-weight: bold;
-    padding: 10px;
+    padding: 20px;
 }
 
 .nav li {
@@ -19,7 +20,41 @@
     text-decoration: none;
 }
 
+.jumbotron {
+    font-family: "Arial";
+    background-image: url(../images/banner2.jpg);
+    height: 380px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #E8E8E8;
+    text-shadow: 2px 2px #000;
+}
+
 .jumbotron .container {
-    background-image: url("../images/leaf.jpg");
-    background-repeat: repeat;
+    position: relative;
+    top: 50px;
+}
+
+.jumbotron h1 {
+    text-shadow: 2px 2px #A6A6A6;
+}
+
+.msg {
+    background-color: #f7f7f7;
+}
+
+#hw1,
+#hw2,
+#hw3 {
+    width: 200px;
+    height: 100px;
+    margin: 10px;
+    background-color: #BFBFBF;
+}
+
+#footer {
+    margin-top: 200px;
+    height: 50px;
+    background-color: #CECECE;
+    text-align: center;
 }
