--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -1,33 +1,27 @@
 /* 導覽列 */
 
-.nav .container-fluid {
-    height: 50px;
-    background-color: gray;
-}
-
-.nav a {
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 20px;
-}
-
 .nav li {
     display: inline;
 }
 
-.nav li a {
+.nav .container-fluid {
+    //height: 50px;
+    //background-color: gray;
+}
+
+.nav a {
+    //color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 20px 20px;
     text-decoration: none;
 }
 
 .jumbotron {
-    font-family: "Arial";
-    background-image: url(../images/banner2.jpg);
-    height: 380px;
+    background-image: url(../images/banner3.jpg);
+    height: 400px;
     background-repeat: no-repeat;
     background-size: cover;
-    color: #E8E8E8;
-    text-shadow: 2px 2px #000;
 }
 
 .jumbotron .container {
@@ -36,20 +30,28 @@
 }
 
 .jumbotron h1 {
+    color: #F5F5F5;
+    font-size: 48px;
+    font-family: "san-serif";
     text-shadow: 2px 2px #A6A6A6;
 }
 
-.msg {
-    background-color: #f7f7f7;
+.jumbotron p {
+    font-size: 24px;
+    color: #F5F5F5;
 }
 
-#hw1,
-#hw2,
-#hw3 {
-    width: 200px;
-    height: 100px;
-    margin: 10px;
-    background-color: #BFBFBF;
+.jumbotron a {
+    background-color: #E8E8E8;
+}
+
+.read-more {
+    background-color: #E8E8E8;
+}
+
+.read-more h3 {
+    font-size: 18px;
+    font-weight: bold;
 }
 
 #footer {
