--- a/css/readme.css
+++ b/css/readme.css
@@ -4,6 +4,7 @@ body {
 
 .container {
     width: 600px;
+    height: 600px;
     margin: 0 auto;
 }
 
@@ -12,6 +13,11 @@ body {
     width: 300px;
     background: #fff;
     position: relative;
+    top: 10px;
     padding: 25px;
     border: 2px solid black;
+}
+
+.poem19 p {
+    margin: 10px;
 }
