--- a/css/food.css
+++ b/css/food.css
@@ -1,6 +1,5 @@
 .nav {
     width: 100%;
-
 }
 
 .container {
@@ -28,6 +27,14 @@ p>img {
     margin-left: auto;
     margin-right: auto;
 }
+
+
+/*
+#block2 {
+    widows: 720px;
+    margin: 0 auto;
+    text-align: center;
+}*/
 
 #block3 {
     width: 860px;
