--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -5,12 +5,12 @@
 }
 
 .nav .container-fluid {
-    //height: 50px;
-    //background-color: gray;
+    /*height: 50px;
+    background-color: gray;*/
 }
 
 .nav a {
-    //color: #fff;
+    /*color: #fff;*/
     font-size: 16px;
     font-weight: bold;
     padding: 20px 20px;
